--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,17 +10,33 @@
 
     <h1>World's Best Lasagna</h1>
     <img src="23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.webp" alt="A photo of the lasagna finished product">
-        <p>Directions</p>
-        <p>Gather all your ingredients.</p>
-        <p>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</p>
-        <p>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</p>
-        <p>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</p>
-        <p>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</p>
-        <p>Preheat the oven to 375 degrees F (190 degrees C).</p>
-        <p>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</p>
-        <p>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</p>
-        <p>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</p>
-        <p>Rest lasagna for 15 minutes before serving.</p>
-        <p>Recipe source: <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Allrecipes</a></p>
-</body>
+    <h2>Description</h2>
+    <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — read all about his life and legacy here.</p>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and garlic</li>
+        <li>Tomato products</li>
+        <li>Sugar</li>
+        <li>Spices and seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>   
+    <h2>Directions</h2>
+    <ol>
+        <li>Gather all your ingredients.</li>
+        <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
+        <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
+        <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
+        <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
+        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+        <li>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
+        <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
+        <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
+        <li>Rest lasagna for 15 minutes before serving.</li>
+        
+
+    </ol>
+    <p>Recipe source: <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Allrecipes</a></p>
+    </body>
 </html>
