Added third recipee and updated index html
Added Bread recipee
Updated index file to include links to all 3 recipes
Improved my git commit message skills

--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Potato Salad Recipee</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
 
-    <h1>World's Best Lasagna</h1>
+    <h1>Potato Salad recipee</h1>
     <img src="16729-old-fashioned-potato-salad-DDMFS-4x3-3e270b1b82744aa6ac355fef41a5a43c.webp" alt="A photo of the lasagna finished product">
     <h2>Description</h2>
-    <p>The best potato salads are a balance of flavors and textures, where creamy, tangy, sweet, salty, tender, and crunchy meet in perfect harmony. Here are the ingredients for this top-rated potato salad recipe:
+    <p>The best potato salads are a balance of flavors and textures, where creamy, tangy, sweet, salty, tender, and crunchy meet in perfect harmony. Here are the ingredients for this top-rated potato salad recipe:</p>
         <li>Potatoes</li>
         <li>Eggs</li>
         <li>Celery</li>
