--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">World's Best Lasagna</a>
-    <p>Recipe source: <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Allrecipes</a></p>
+    <a href="recipes/potatosalad.html">Potato Salad</a>
+    <a href="recipes/bread.html">Bread</a>
 
 </body>
 </html>
