Modified index to include list of recipes
The recipes were supposed to be inside an unordered
list.
Included the recipe links inside such a list.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's Best Lasagna</a>
-    <a href="recipes/potatosalad.html">Potato Salad</a>
-    <a href="recipes/bread.html">Bread</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="recipes/potatosalad.html">Potato Salad</a></li>
+        <li><a href="recipes/bread.html">Bread</a></li>
+    </ul>
+
 
 </body>
 </html>
